--- a/images/readme
+++ b/images/readme
@@ -1,1 +1,2 @@
-in this folder several images, not being pair-diagrams or photos
+In this folder the images. In sub-folders per page.
+Do not delete wand.png
